<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <TextView android:id="@+id/myTextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editText"
        android:layout_alignLeft="@+id/addButton"
        android:layout_alignTop="@+id/editText"
        android:layout_toLeftOf="@+id/editText"
        android:text="@string/intro"></TextView>

    <EditText android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:ems="10" >

    </EditText>

    <Button android:id="@+id/subtractButton"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_above="@+id/resetButton"
        android:layout_alignLeft="@+id/addButton"
        android:layout_alignRight="@+id/addButton"
        android:text="@string/subtractone"></Button>

    <Button android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_above="@+id/subtractButton"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/editText"
        android:text="@string/addone"></Button>

    <Button android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_above="@+id/Historic"
        android:layout_alignLeft="@+id/subtractButton"
        android:layout_alignRight="@+id/subtractButton"
        android:text="@string/reset"></Button>

    <Button android:id="@+id/Historic"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/resetButton"
        android:layout_alignRight="@+id/resetButton"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:onClick="ShowHistoric"
        android:text="@string/historic"></Button>

</RelativeLayout>
